# audio-player-mcp

./: .gitignore  Dockerfile  FEATURES.md  README.md  audio_player_mcp.py  debug_server.py  pyproject.toml  run_tests.sh  smithery.yaml  test_fuzzy_search.py  test_mcp_vlc.py  test_vlc_playback.py
src/audio_player_mcp/: player.py
tests/: __init__.py  test_full_search_integration.py  test_fuzzy_search.py  test_genre_search.py  test_mcp_vlc.py  test_metadata_search.py  test_popular_music.py  test_random_artist.py  test_vlc_playback.py
